# Indian-Market-Data-Pipeline

./: .env.example  .env.test  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: daily-refresh.yml
api/: dependencies.py  main.py
api/routers/: financials.py  market.py  mutual_funds.py  news.py  stocks.py
core/: __init__.py  config.py  exceptions.py  logging.py
data/exports/: CMOTS_Data_Catalog.xlsx  CMOTS_Data_Catalog_v2.xlsx  company_filings.csv  company_news.csv  financials.csv  market_indices.csv  scraper_checkpoints.csv  scraper_run_log.csv  stock_prices.csv  stocks_master.csv  symbol_slug_map.csv  top_gainers_losers.csv
database/: schema.sql  schema_sqlite.sql
database/migrations/: env.py  script.py.mako
docker/: Dockerfile  entrypoint.sh
docs/: CMOTS_API_SPEC.md  DEPLOYMENT.md
models/: __init__.py  enums.py  schemas.py
observability/: prometheus.yml
scrapers/: __init__.py  amfi.py  base.py  bse.py  moneycontrol.py  nse.py  screener.py
scripts/: build_cmots_excel.py  ingest_once.py  init_local_db.py  inspect_db.py
scripts/cmots/: comments.py  equity_part1.py  equity_part2.py  equity_part3.py  mutual_funds.py
services/: __init__.py  cache_service.py  circuit_breaker.py  db_service.py  normalization.py  scheduler.py  sqlite_storage.py  storage.py
tests/: conftest.py
tests/test_api/: test_dependencies.py  test_health.py
tests/test_scrapers/: test_amfi.py  test_base.py  test_bse.py
(+8 files in other folders)
