[project]
name = "indian-market-pipeline"
version = "0.1.0"
description = "Production-grade Indian stock market data pipeline (CMOTS-alternative)"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "RET", "SIM"]
ignore = ["S101", "S104"]  # allow asserts in tests, allow bind to 0.0.0.0

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "playwright_stealth.*", "supabase.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "integration: tests that hit live external services (skipped by default)",
    "slow: long-running tests",
]

[tool.coverage.run]
source = ["scrapers", "services", "api", "core", "models"]
omit = ["tests/*", "*/migrations/*"]
